editors/tree-sitter-trust/grammar.js
    source_file: ($) => repeat($._item),

    // ------------------------------------------------------------ comments

    _item: ($) =>
      choice(
        $.mod_item,
        $.use_item,
        $.macro_item,
        $.function_item,
        $.struct_item,
        $.enum_item,
        $.const_item,
        $.trait_item,
        $.impl_item,
      ),

    /// `macro name($a, $($x),*) { … }` (Ch. 7 §6).
    function_item: ($) =>
      seq(
        repeat($.attribute),
        optional('pub'),
        'fn',
        field('name', $.identifier),
        optional($.generic_parameters),
        $.parameters,
        optional(seq('->', field('return_type', $._type))),
        optional($.where_clause),
        choice(field('body', $.block), ';'),
      ),

    parameters: ($) => seq('(', commaSep(choice($.self_parameter, $.parameter)), ')'),

    parameter: ($) => seq(field('name', $.identifier), ':', field('type', $._type)),

    generic_parameters: ($) =>
      seq('<', commaSep(choice($.lifetime, $.const_parameter, $.type_parameter)), '>'),

    type_parameter: ($) => seq($.identifier, optional($.bounds)),

    bounds: ($) => seq(':', sepBy1('+', choice($.lifetime, $.bound))),

    /// The `?` is `?Sized` and nothing else (Ch. 4 §2.5), but which name may
    /// follow it is the checker's rule rather than the grammar's.
    bound: ($) => seq(optional('?'), $.identifier, optional($.type_arguments)),

    /// `where T: Bound` and `where n <= a.len()` share a clause: the second
    /// is a predicate the caller must have established (Ch. 4 §2.8), and is
    /// an expression rather than a bound.
    /// A trailing comma is allowed and the `{` that follows it opens the
    /// item's body, not another predicate — so the clause reduces as soon as
    /// it can rather than reaching for one more.
    where_clause: ($) =>
      prec.left(
        seq('where', commaSep1(choice($.where_bound, field('predicate', $._expression)))),
      ),

    where_bound: ($) => seq(choice($.lifetime, $.identifier), $.bounds),

    const_item: ($) =>
      seq(
        optional('pub'),
        'const',
        field('name', $.identifier),
        ':',
        field('type', $._type),
        optional(seq('=', field('value', $._expression))),
        ';',
      ),

    _type: ($) =>
      choice(
        $.primitive_type,
        $.never_type,
        $.self_type,
        $.unit_type,
        $.tuple_type,
        $.array_type,
        $.reference_type,
        $.dynamic_type,
        $.impl_fn_type,
        $.generic_type,
        $.qualified_type,
        $.identifier,
      ),

    primitive_type: (_) => choice('trit', 'bool', 't9', 't27', 'taddr', 'char', 'str'),
    array_type: ($) => seq('[', $._type, optional(seq(';', $._expression)), ']'),
    reference_type: ($) =>
      seq('&', optional($.lifetime), optional('mut'), field('type', $._type)),
    impl_fn_type: ($) =>
      prec.right(
        seq(
          'impl',
          field('trait', $.identifier),
          '(',
          commaSep($._type),
          ')',
          optional(seq('->', $._type)),
        ),
      ),
    generic_type: ($) => seq(field('name', $.identifier), $.type_arguments),
    /// `T::Item` and `Self::Item` — an associated type (Ch. 4 §1.7).
    type_arguments: ($) => seq('<', commaSep1(choice($._type, $.lifetime, $.associated_binding)), '>'),

    block: ($) => seq('{', repeat($._statement), optional($._expression), '}'),

    _statement: ($) =>
      choice(
        $.let_statement,
        $._item,
        $.expression_statement,
      ),

    expression_statement: ($) =>
      choice(seq($._expression, ';'), prec(1, $._block_expression)),

    // ------------------------------------------------------- expressions

    _expression: ($) =>
      choice(
        $._literal,
        $.identifier,
        $.self_expression,
        $.path,
        $.unit_expression,
        $.tuple_expression,
        $.array_expression,
        $.parenthesized_expression,
        $.struct_expression,
        $.call_expression,
        $.method_call_expression,
        $.field_expression,
        $.index_expression,
        $.try_expression,
        $.unary_expression,
        $.reference_expression,
        $.binary_expression,
        $.assignment_expression,
        $.cast_expression,
        $.range_expression,
        $.closure_expression,
        $.macro_call,
        $.macro_parameter,
        $.break_expression,
        $.continue_expression,
        $.return_expression,
        $._block_expression,
      ),

    /// The five written with braces, which may stand as statements.
    _block_expression: ($) =>
      choice(
        $.block,
        $.if_expression,
        $.match_expression,
        $.loop_expression,
        $.while_expression,
        $.for_expression,
        // `$( … )*` ends at its `*`, so it stands as a statement (§3).
        $.macro_repeat,
      ),

    struct_expression: ($) =>
      prec.dynamic(
        -1,
        seq(field('name', choice($.identifier, $.path, $.generic_type)), $.field_initializers),
      ),

    field_initializers: ($) => seq('{', commaSep($.field_initializer), '}'),

    field_initializer: ($) =>
      seq(field('name', $.identifier), optional(seq(':', field('value', $._expression)))),

    arguments: ($) => seq('(', commaSep($._expression), ')'),

    method_call_expression: ($) =>
      prec(
        PREC.postfix + 1,
        seq(
          field('receiver', $._expression),
          '.',
          field('method', $.identifier),
          optional($.turbofish),
          field('arguments', $.arguments),
        ),
      ),

    unary_expression: ($) => prec(PREC.unary, seq(choice('-', '!', '*'), $._expression)),

    binary_expression: ($) => {
      const levels = [
        [PREC.or, '||'],
        [PREC.and, '&&'],
        [PREC.compare, choice('==', '!=', '<', '<=', '>', '>=')],
        [PREC.spaceship, '<=>'],
        [PREC.shift, choice('<<', '>>')],
        [PREC.sum, choice('+', '-')],
        [PREC.product, choice('*', '/', '%')],
      ];
      return choice(
        ...levels.map(([p, op]) =>
          prec.left(p, seq(field('left', $._expression), field('operator', op), field('right', $._expression))),
        ),
      );
    },

    if_expression: ($) =>
      prec.right(
        seq(
          'if',
          field('condition', $._condition),
          field('consequence', $.block),
          optional(seq('else', field('alternative', choice($.block, $.if_expression)))),
        ),
      ),

    match_expression: ($) =>
      seq('match', field('value', $._condition), '{', commaSep($.match_arm), '}'),

    match_arm: ($) =>
      seq(
        field('pattern', $.match_pattern),
        '=>',
        field('value', $._expression),
      ),

    match_pattern: ($) =>
      seq(sepBy1('|', $._pattern), optional(seq('if', field('guard', $._expression)))),

    _condition: ($) => prec(2, $._expression),

    _pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $._literal,
        $.negative_literal,
        $.identifier,
        $.path_pattern,
        $.tuple_struct_pattern,
        $.struct_pattern,
        $.tuple_pattern,
        $.binding_pattern,
      ),

    negative_literal: ($) => seq('-', $._literal),
    _literal: ($) =>
      choice($.integer_literal, $.boolean_literal, $.char_literal, $.string_literal),

    /// One run of digits and letters, which is exactly what the lexer takes
    /// before handing it to `trit-core` — decimal, `0t…` balanced ternary,
    /// `0h…` heptavintimal, and the `1t`/`0t`/`-1t` trit literals (§1.4).
    integer_literal: (_) => token(/[0-9][0-9a-zA-Z_]*/),

    char_literal: (_) =>
      token(seq("'", choice(/[^'\\\n]/, seq('\\', choice(/[nrt\\'"0]/, seq('u', '{', /[0-9a-fA-F]{1,6}/, '}')))), "'")),

    lifetime: (_) => token(seq("'", /[a-zA-Z_][a-zA-Z0-9_]*/)),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,
  },
});
